--- a/TireManufacturing.csproj
+++ b/TireManufacturing.csproj
@@ -37,6 +37,10 @@
     <ApplicationIcon>racing_tct_2.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Interop.OPCAutomation">
+      <HintPath>T:\Application\C#\TireManufacturing\Interop.OPCAutomation.dll</HintPath>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
